docs/examples/invalid/syntaxErr/variables/badintAssignments.wacc
# bad integer assignments

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int x = 22 0 ;
  int y = 1A4
end
